# mds

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  main.py  pyproject.toml  setup.py
md_genie/: __main__.py  cli.py  config.py  server.py
md_genie/static/: styles.css
md_genie/views/: content.tpl  main.tpl
mds/: __main__.py  cli.py  config.py  markdown.py  server.py
mds/static/: markdown.css  search.js  styles.css  utils.js
mds/views/: content.tpl  editor.tpl  home-content.tpl  home.tpl  home_bar.tpl  home_content.tpl  homebar.tpl  main.tpl  main_layout.tpl  markdown_content.tpl  markdown_content_bar.tpl  markdown_editor.tpl  markdown_editor_bar.tpl  mdbar.tpl  nav.tpl  searchbar.tpl
