[tool.poetry]
name = "md-genie"
version = "0.0.1"
description = "Markdown in a bottle"
authors = ["samdixon <sdixon@posteo.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
bottle = "^0.12.18"
mistune = "^0.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
